# pii_recognition

./: .flake8  .gitignore  .travis.yml  README.md  constants.py  dev_eval.py  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
app_local/: README.md  manifest.json
app_remote/: README.md  __init__.py  wsgi.py
behavioral_tests/: comprehend_pii_test.py
data/: README.md
data_reader/: conll_reader.py  conll_reader_test.py  data_reader_registry.py  wnut_reader.py  wnut_reader_test.py
docs/: development.md
eval/: evaluation.py
evaluation/: evaluation_result.py  label.py  metrics.py  metrics_test.py  model_evaluator.py  model_evaluator_test.py  prediction_error.py  span_to_token.py
experiments/: first_letter_uppercase.py  flair.py  flair_exp.py  letter_case.py  manage_experiments.py  mlflow_log.py  mlflow_tracking.py  pipeline.py  python_crf.py  python_crf_exp.py  spacy_en_core_web_lg.py  spacy_xx_ent_wiki_sm.py  stanza.py  types.py
features/: word_to_features.py
frontend/: README.md  manifest.json
label/: mapping.py  mapping_test.py  span.py  span_test.py  span_to_token_test.py
ml_models/: crf_model.py
notebooks/: eval_notebook.ipynb  evaluation_metrics_demostration.ipynb  evaluation_metrics_demostration.py
paths/: __init__.py  data_path.py  path.py
pii_recognition/: __init__.py  constants.py  dev.py  utils.py  utils_test.py
reader/: conll_reader.py
recognisers/: crf_recogniser.py  crf_recogniser_test.py  entity_recogniser.py  entity_recogniser_test.py  first_letter_uppercase.py  first_letter_uppercase_recogniser.py  first_letter_uppercase_recogniser_test.py  first_letter_uppercase_test.py  flair.py  flair_recogniser.py  flair_recogniser_test.py  flair_test.py  recogniser_registry.py  recogniser_result.py  recognizer_registry.py  spacy_recogniser.py  spacy_recogniser_test.py  stanza.py  stanza_test.py  (+2 more)
(+406 files in other folders)
